<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/string_6"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_7"
                android:textSize="12dp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_corner_gray"
            android:text="@string/string_8"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_corner_gray"
            android:text="@string/string_9"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_corner_gray"
            android:text="@string/string_10"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>