<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/string_6"
                    android:textColor="@color/color"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/string_7"
                    android:textColor="@color/color"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

            </LinearLayout>

            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_12"
                android:textColor="@color/color"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_footer"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/string_11"
            android:textColor="@color/color_2"
            android:textSize="12dp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/string_3"
            android:textColor="@color/color" />


    </LinearLayout>

</LinearLayout>