<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_2"
            android:textColor="@color/color"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_4"
                android:textColor="@color/color"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_5"
                android:textColor="@color/color"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color"
                android:singleLine="true"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/string_3"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/color"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>